# mow-the-lawn

./: .env.example  .gitignore  README.md  classifier.py  eval_rl.py  grid_types.py  main.py  poc_inference.ts  pyproject.toml  simulate.py  train_rl.py  visualize.py  visualize_rl.py
analysis/: hard_levels.py  hard_levels_candidates.csv
data/: labelled_paths.csv  model.json  mow_test_rows.csv
data/rl/: maskable_ppo.best.config.json  maskable_ppo_12x12_curriculum.config.json  maskable_ppo_8x8_bc.best.config.json
src/: grid.py  optimal_solver.py  shared_types.py  solvers.py  visualize.py
src/optimal/: __init__.py  classify.py  library.py  visualize_clusters.py
src/rl_solver/: README.md  __init__.py  config.py  env.py  evaluate.py  expert.py  features.py  metrics.py  model.py  rollout.py
ui/: README.md  app.js  app.py  index.html  styles.css
web/: classifier.ts
