[project]
name = "mow-the-lawn"
version = "0.1.0"
description = "Basic simulation and classification of path traversal strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
]
